# news-clusterization-service

./: .env.example  .gitignore  README.md  config.example.yaml  manage.py  pyproject.toml
news/: models.py  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_load_initial_dataset.py
news_clustering/: asgi.py  dataset.py  nlp.py  parsers.py  settings.py  signals.py  urls.py  wsgi.py
news_clustering/api/: vk.py
news_clustering/experiments/: calc_news_embeddings.ipynb  cluster_news.ipynb  clustering.ipynb  ft-emb.pickle  rubert-clustering.ipynb
news_parser/: config.py  engine.py  main.py  models.py  parser.py  parsers.py
news_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
news_parser/api/: vk.py
news_parser/db/: engine.py  models.py  session.py
news_parser/parser/: config.py  parsers.py
news_parser/parser/api/: vk.py
news_parser/parser/db/: engine.py  models.py  session.py
news_parser/parser/utils/: dataset.py
news_parser/text_analyzer/: ner.py  relation_extraction.ipynb
news_parser/utils/: dataset.py
