[tool.poetry]
name = "news_parser"
version = "0.1.0"
description = ""
authors = ["Maxim Vasilev <vsmaxim8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
newspaper3k = "^0.2.8"
lxml = "^4.5.0"
SQLAlchemy = "^1.3.13"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
